fix: alignments & reCaptcha in getstarted

--- a/src/components/modules/GetStarted/GetStarted.css
+++ b/src/components/modules/GetStarted/GetStarted.css
@@ -69,3 +69,7 @@ textarea {
     border: solid 1px #00000030;
     border-radius: 5px;
 }
+
+.step4Container {
+    padding: 2%
+}
