--- a/src/components/modules/GetStarted/GettingInfo/style.css
+++ b/src/components/modules/GetStarted/GettingInfo/style.css
@@ -1,5 +1,6 @@
 .formContainer {
      margin-bottom: 5%;
+     padding: 0 5%
 }
 
 .body {
